--- a/openmrs-client/src/main/res/layout/activity_patient_dashboard.xml
+++ b/openmrs-client/src/main/res/layout/activity_patient_dashboard.xml
@@ -49,7 +49,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="?android:attr/textColorPrimary" />
+                android:background="@color/dark_purple" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/pager"
