--- a/openmrs-client/src/main/res/layout/fragment_patient_details.xml
+++ b/openmrs-client/src/main/res/layout/fragment_patient_details.xml
@@ -122,7 +122,7 @@
             android:layout_height="1dp"
             android:layout_marginHorizontal="@dimen/padding_16"
             android:layout_marginTop="24dp"
-            android:background="?android:attr/textColorPrimary"
+            android:background="@color/dark_purple"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/patientDetailsBirthDate" />
@@ -250,7 +250,7 @@
             android:layout_height="1dp"
             android:layout_marginHorizontal="@dimen/padding_16"
             android:layout_marginTop="24dp"
-            android:background="?android:attr/textColorPrimary"
+            android:background="@color/dark_purple"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
